--- a/Games_COL_Migracion/Games_COL/Utilitarios/Utilitarios.csproj
+++ b/Games_COL_Migracion/Games_COL/Utilitarios/Utilitarios.csproj
@@ -41,6 +41,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="U_Datos.cs" />
+    <Compile Include="U_Sugerencia.cs" />
     <Compile Include="U_user.cs" />
     <Compile Include="U_userCrearpost.cs" />
   </ItemGroup>
