--- a/Games_COL_Migracion/Games_COL/Logica/Logica.csproj
+++ b/Games_COL_Migracion/Games_COL/Logica/Logica.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="L_mac.cs" />
     <Compile Include="L_Usercs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
