--- a/Games_COL_Migracion/Games_COL/Utilitarios/Utilitarios.csproj
+++ b/Games_COL_Migracion/Games_COL/Utilitarios/Utilitarios.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="U_Datos.cs" />
+    <Compile Include="U_Datospqr.cs" />
     <Compile Include="U_Interaccion.cs" />
     <Compile Include="U_logueo.cs" />
     <Compile Include="U_session.cs" />
