--- a/Games_COL_Migracion/Games_COL/Utilitarios/Utilitarios.csproj
+++ b/Games_COL_Migracion/Games_COL/Utilitarios/Utilitarios.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="U_comentarios.cs" />
     <Compile Include="U_Datos.cs" />
     <Compile Include="U_Datospqr.cs" />
     <Compile Include="U_Interaccion.cs" />
