--- a/Games_COL_Migracion/Games_COL/Datos/Datos.csproj
+++ b/Games_COL_Migracion/Games_COL/Datos/Datos.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="D_correo.cs" />
     <Compile Include="D_User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
