--- a/Games_COL_Migracion/Games_COL/Datos/Datos.csproj
+++ b/Games_COL_Migracion/Games_COL/Datos/Datos.csproj
@@ -32,7 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Npgsql">
-      <HintPath>..\Web\Bin\Npgsql.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\PostgreSQL\Npgsql\bin\net45\Npgsql.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
