--- a/Games_COL_Migracion/Games_COL/Web/Web.config
+++ b/Games_COL_Migracion/Games_COL/Web/Web.config
@@ -8,7 +8,7 @@
   
   type="CrystalDecisions.Shared.RptBuildProviderHandler, CrystalDecisions.Shared, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, Custom=null"/></sectionGroup></sectionGroup></configSections>
   <connectionStrings>
-    <add name="Postgres" connectionString=" Host=localhost; Database=Gamescol; User Id=postgres; Password=1234; Port= 5432;"/>
+    <add name="Postgres" connectionString=" Host=localhost; Database=Games_Col; User Id=postgres; Password=1234; Port= 5432;"/>
   </connectionStrings>
   <appSettings>
       <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
