--- a/Games_COL_Migracion/Games_COL/Web/Web.config
+++ b/Games_COL_Migracion/Games_COL/Web/Web.config
@@ -12,7 +12,7 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="Postgres" connectionString=" Host=localhost; Database=test2; User Id=postgres; Password=1234; Port= 5432;" />
+    <add name="Postgres" connectionString=" Host=localhost; Database=Games_col; User Id=postgres; Password=1234; Port= 5432;" />
   </connectionStrings>
   <appSettings>
       <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
