--- a/Games_COL_Migracion/Games_COL/Web/Web.config
+++ b/Games_COL_Migracion/Games_COL/Web/Web.config
@@ -22,6 +22,9 @@
       <add key="CrystalImageCleaner-Sleep" value="60000" />
   </appSettings>
   <system.web>
+    
+      <sessionState mode="InProc" cookieless="false" timeout="1"></sessionState>
+        
     <compilation debug="true" targetFramework="4.5">
       <assemblies>
         <add assembly="CrystalDecisions.Web, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304" />
