--- a/Games_COL_Migracion/Games_COL/Utilitarios/Utilitarios.csproj
+++ b/Games_COL_Migracion/Games_COL/Utilitarios/Utilitarios.csproj
@@ -58,6 +58,8 @@
     <Compile Include="Entity_contacto.cs" />
     <Compile Include="Entity_post.cs" />
     <Compile Include="Entity_pqr.cs" />
+    <Compile Include="Entity_reporte.cs" />
+    <Compile Include="Entity_reporteModer.cs" />
     <Compile Include="Entity_usuario.cs" />
     <Compile Include="InforR_administrador.Designer.cs">
       <AutoGen>True</AutoGen>
