--- a/Games_COL_Migracion/Games_COL/Logica/Logica.csproj
+++ b/Games_COL_Migracion/Games_COL/Logica/Logica.csproj
@@ -72,6 +72,10 @@
       <Project>{898ee0da-064f-4c93-80cc-a7d2189c1366}</Project>
       <Name>Datos</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Persistencia_funciones\Persistencia_funciones.csproj">
+      <Project>{7a5b43c8-d9a2-4180-b74b-ffd56ed6849b}</Project>
+      <Name>Persistencia_funciones</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Utilitarios\Utilitarios.csproj">
       <Project>{4f86464a-0c31-4cd8-988e-bb1da0718618}</Project>
       <Name>Utilitarios</Name>
