--- a/Games_COL_Migracion/Games_COL/Web/Web.config
+++ b/Games_COL_Migracion/Games_COL/Web/Web.config
@@ -15,7 +15,7 @@
   </configSections>
  
   <connectionStrings>
-    <add name="Games_Col" connectionString=" Host=localhost; Database=GamesCol; User Id=postgres; Password=1234; Port= 5432;" providerName="Npgsql" />
+    <add name="GamesCol" connectionString=" Host=localhost; Database=GamesCol; User Id=postgres; Password=1234; Port= 5432;" providerName="Npgsql" />
     <add name="Postgres" connectionString=" Host=localhost; Database=GamesCol; User Id=postgres; Password=1234; Port= 5432;" providerName="Npgsql" />
     <!--<add name="GamesColEntities" providerName="System.Data.SqlClient" connectionString="provider connection string=&quot;data source=LAPTOP-H97LD0PS\SQLEXPRESS;initial catalog=GamesCol;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     
@@ -32,15 +32,7 @@
       <sessionState mode="InProc" cookieless="false" timeout="30"></sessionState>
         
     <compilation debug="true" targetFramework="4.5">
-      <assemblies>
-        <add assembly="CrystalDecisions.Web, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304" />
-        <add assembly="CrystalDecisions.Shared, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304" />
-        <add assembly="log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304" />
-        <add assembly="CrystalDecisions.ReportSource, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304" />
-        <add assembly="CrystalDecisions.ReportAppServer.Controllers, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304" />
-        <add assembly="CrystalDecisions.ReportAppServer.DataDefModel, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304" />
-        <add assembly="CrystalDecisions.CrystalReports.Engine, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304" />
-      <add assembly="CrystalDecisions.ReportAppServer.ClientDoc, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692fbea5521e1304" /></assemblies>
+      
     <buildProviders><add extension=".rpt" type="CrystalDecisions.Web.Compilation.RptBuildProvider, CrystalDecisions.Web, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692fbea5521e1304" /></buildProviders></compilation>
     <httpRuntime targetFramework="4.5" />
   <httpHandlers><add verb="GET" path="CrystalImageHandler.aspx" type="CrystalDecisions.Web.CrystalImageHandler, CrystalDecisions.Web, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692fbea5521e1304" /></httpHandlers><pages>
