--- a/Games_COL_Migracion/Games_COL/Web/Web.config
+++ b/Games_COL_Migracion/Games_COL/Web/Web.config
@@ -17,6 +17,14 @@
     <!--<add name="Postgres" connectionString=" Host=localhost; Database=GamesCol; User Id=postgres; Password=1234; Port= 5432;" providerName="Npgsql" />-->
     <!--<add name="GamesColEntities" providerName="System.Data.SqlClient" connectionString="provider connection string=&quot;data source=LAPTOP-H97LD0PS\SQLEXPRESS;initial catalog=GamesCol;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <add name="GamesColEntities" providerName="System.Data.SqlClient" connectionString="Server=.\SQLEXPRESS;Database=Games-col;Integrated Security=True;" />
+    <!--<add
+    name="GamesColEntities"
+    connectionString="Data Source=gamescolsql.cxaqogoryx50.us-east-2.rds.amazonaws.com; 
+    Database=gamescolsql;
+    User ID=G_admin;Password=8U9~b379"
+    providerName="System.Data.SqlClient"
+    
+  />-->
   </connectionStrings>
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
@@ -28,10 +36,10 @@
     <sessionState mode="InProc" cookieless="false" timeout="30" />
     <compilation debug="true" targetFramework="4.5">
       <assemblies>
-         <add assembly="CrystalDecisions.Web, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
+        <add assembly="CrystalDecisions.Web, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
         <add assembly="CrystalDecisions.Shared, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
         <add assembly="log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
-       <add assembly="CrystalDecisions.ReportSource, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
+        <add assembly="CrystalDecisions.ReportSource, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
         <add assembly="CrystalDecisions.ReportAppServer.Controllers, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
         <add assembly="CrystalDecisions.ReportAppServer.DataDefModel, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
         <add assembly="CrystalDecisions.CrystalReports.Engine, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
