--- a/Games_COL_Migracion/Games_COL/Web/Web.config
+++ b/Games_COL_Migracion/Games_COL/Web/Web.config
@@ -18,12 +18,11 @@
     <!--<add name="GamesColEntities" providerName="System.Data.SqlClient" connectionString="provider connection string=&quot;data source=LAPTOP-H97LD0PS\SQLEXPRESS;initial catalog=GamesCol;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <add name="GamesColEntities" providerName="System.Data.SqlClient" connectionString="Server=.\SQLEXPRESS;Database=Games-col;Integrated Security=True;" />
     <!--<add
-    name="GamesColEntities"
-    connectionString="Data Source=gamescolsql.cxaqogoryx50.us-east-2.rds.amazonaws.com; 
-    Database=gamescolsql;
-    User ID=G_admin;Password=8U9~b379"
-    providerName="System.Data.SqlClient"
-    
+     name="GamesColEntities"
+     connectionString="Data Source=gamescolsql.cxaqogoryx50.us-east-2.rds.amazonaws.com; 
+    Initial Catalog=GamesCol;
+    User ID=G_admin;Password=8U9~b379;"
+     providerName="System.Data.SqlClient"
   />-->
   </connectionStrings>
   <appSettings>
