update(servicion consumo final)

--- a/Games_COL_Migracion/Games_COL/Web/Web.config
+++ b/Games_COL_Migracion/Games_COL/Web/Web.config
@@ -110,4 +110,20 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="WSEstudiantesOnceSoap" />
+        <binding name="ServiciosSoap" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://colegio-leon.ddns.net/WebServices/WSEstudiantesOnce.asmx"
+        binding="basicHttpBinding" bindingConfiguration="WSEstudiantesOnceSoap"
+        contract="ServicioColegio.WSEstudiantesOnceSoap" name="WSEstudiantesOnceSoap" />
+      <endpoint address="http://platoweb.ddns.net/servicios.asmx" binding="basicHttpBinding"
+        bindingConfiguration="ServiciosSoap" contract="ServicioPlatoweb.ServiciosSoap"
+        name="ServiciosSoap" />
+    </client>
+  </system.serviceModel>
 </configuration>
