update(contactenos y chatbot)

--- a/Games_COL_Migracion/Games_COL/Web/Web.config
+++ b/Games_COL_Migracion/Games_COL/Web/Web.config
@@ -34,7 +34,7 @@
   <system.web>
     <sessionState mode="InProc" cookieless="false" timeout="30" />
     <compilation debug="true" targetFramework="4.5">
-      <assemblies>
+      <!-- <assemblies>
        <add assembly="CrystalDecisions.Web, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
         <add assembly="CrystalDecisions.Shared, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
         <add assembly="log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
@@ -43,7 +43,7 @@
         <add assembly="CrystalDecisions.ReportAppServer.DataDefModel, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
         <add assembly="CrystalDecisions.CrystalReports.Engine, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
         <add assembly="CrystalDecisions.ReportAppServer.ClientDoc, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692fbea5521e1304"/>
-      </assemblies>
+      </assemblies>-->
       <buildProviders>
         <add extension=".rpt" type="CrystalDecisions.Web.Compilation.RptBuildProvider, CrystalDecisions.Web, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692fbea5521e1304" />
       </buildProviders>
@@ -108,6 +108,10 @@
         <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.4.1" newVersion="4.0.4.1" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.5.0.0" newVersion="4.5.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.serviceModel>
@@ -118,12 +122,8 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://colegio-leon.ddns.net/WebServices/WSEstudiantesOnce.asmx"
-        binding="basicHttpBinding" bindingConfiguration="WSEstudiantesOnceSoap"
-        contract="ServicioColegio.WSEstudiantesOnceSoap" name="WSEstudiantesOnceSoap" />
-      <endpoint address="http://platoweb.ddns.net/servicios.asmx" binding="basicHttpBinding"
-        bindingConfiguration="ServiciosSoap" contract="ServicioPlatoweb.ServiciosSoap"
-        name="ServiciosSoap" />
+      <endpoint address="http://colegio-leon.ddns.net/WebServices/WSEstudiantesOnce.asmx" binding="basicHttpBinding" bindingConfiguration="WSEstudiantesOnceSoap" contract="ServicioColegio.WSEstudiantesOnceSoap" name="WSEstudiantesOnceSoap" />
+      <endpoint address="http://platoweb.ddns.net/servicios.asmx" binding="basicHttpBinding" bindingConfiguration="ServiciosSoap" contract="ServicioPlatoweb.ServiciosSoap" name="ServiciosSoap" />
     </client>
   </system.serviceModel>
 </configuration>
