--- a/Games_COL_Migracion/Games_COL/Web/packages.config
+++ b/Games_COL_Migracion/Games_COL/Web/packages.config
@@ -4,11 +4,14 @@
   <package id="bootstrap" version="4.1.3" targetFramework="net45" />
   <package id="Facebook" version="7.0.6" targetFramework="net45" />
   <package id="jQuery" version="3.3.1" targetFramework="net45" />
+  <package id="JWT" version="1.3.4" targetFramework="net45" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net45" />
   <package id="Microsoft.Net.Compilers" version="2.9.0" targetFramework="net45" developmentDependency="true" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="Npgsql" version="4.0.3" targetFramework="net45" />
   <package id="popper.js" version="1.14.3" targetFramework="net45" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net45" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net45" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net45" />
+  <package id="Twilio" version="5.22.0" targetFramework="net45" />
 </packages>
