--- a/Games_COL_Migracion/Games_COL/Web/Web.config
+++ b/Games_COL_Migracion/Games_COL/Web/Web.config
@@ -16,7 +16,7 @@
     <!--<add name="GamesCol" connectionString=" Host=localhost; Database=GamesCol; User Id=postgres; Password=1234; Port= 5432;" providerName="Npgsql" />-->
     <!--<add name="Postgres" connectionString=" Host=localhost; Database=GamesCol; User Id=postgres; Password=1234; Port= 5432;" providerName="Npgsql" />-->
     <!--<add name="GamesColEntities" providerName="System.Data.SqlClient" connectionString="provider connection string=&quot;data source=LAPTOP-H97LD0PS\SQLEXPRESS;initial catalog=GamesCol;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="GamesColEntities" providerName="System.Data.SqlClient" connectionString="Server=.\SQLEXPRESS;Database=GamesCol;Integrated Security=True;" />
+    <add name="GamesColEntities" providerName="System.Data.SqlClient" connectionString="Server=.\SQLEXPRESS;Database=Games_Col;Integrated Security=True;" />
     <!--<add
      name="GamesColEntities"
      connectionString="Data Source=gamescolsql.cxaqogoryx50.us-east-2.rds.amazonaws.com; 
