update apis final

--- a/Games_COL_Migracion/Games_COL/Web/Web.config
+++ b/Games_COL_Migracion/Games_COL/Web/Web.config
@@ -16,7 +16,7 @@
     <!--<add name="GamesCol" connectionString=" Host=localhost; Database=GamesCol; User Id=postgres; Password=1234; Port= 5432;" providerName="Npgsql" />-->
     <!--<add name="Postgres" connectionString=" Host=localhost; Database=GamesCol; User Id=postgres; Password=1234; Port= 5432;" providerName="Npgsql" />-->
     <!--<add name="GamesColEntities" providerName="System.Data.SqlClient" connectionString="provider connection string=&quot;data source=LAPTOP-H97LD0PS\SQLEXPRESS;initial catalog=GamesCol;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="GamesColEntities" providerName="System.Data.SqlClient" connectionString="Server=.\SQLEXPRESS;Database=Games_Col;Integrated Security=True;" />
+    <add name="GamesColEntities" providerName="System.Data.SqlClient" connectionString="Server=.\SQLEXPRESS;Database=GamesCol;Integrated Security=True;" />
     <!--<add
      name="GamesColEntities"
      connectionString="Data Source=gamescolsql.cxaqogoryx50.us-east-2.rds.amazonaws.com; 
@@ -34,7 +34,7 @@
   <system.web>
     <sessionState mode="InProc" cookieless="false" timeout="30" />
     <compilation debug="true" targetFramework="4.5">
-       <assemblies>
+       <!-- <assemblies>
        <add assembly="CrystalDecisions.Web, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
         <add assembly="CrystalDecisions.Shared, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
         <add assembly="log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
@@ -43,7 +43,7 @@
         <add assembly="CrystalDecisions.ReportAppServer.DataDefModel, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
         <add assembly="CrystalDecisions.CrystalReports.Engine, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692FBEA5521E1304"/>
         <add assembly="CrystalDecisions.ReportAppServer.ClientDoc, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692fbea5521e1304"/>
-      </assemblies>
+      </assemblies>-->
       <buildProviders>
         <add extension=".rpt" type="CrystalDecisions.Web.Compilation.RptBuildProvider, CrystalDecisions.Web, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692fbea5521e1304" />
       </buildProviders>
